Fixed some small alignment issues

--- a/public/css/primary.css
+++ b/public/css/primary.css
@@ -119,12 +119,14 @@ nav:hover {
 
 .btn-mentor {
     display: flex;
+    justify-content: center;
+    flex-direction: column;
     align-items: center;
     background-color: var(--color-quinary);
     padding: 10px;
     border-radius: 50%;
-    height: 30px;
-    width: 30px;
+    height: 40px;
+    width: 40px;
     position: absolute;
     bottom: 25px;
     right: 25px;
@@ -139,8 +141,8 @@ nav:hover {
     align-items: center;
     background-color: var(--color-quinary);
     border-radius: 50%;
-    height: 30px;
-    width: 30px;
+    height: 40px;
+    width: 40px;
     position: absolute;
     bottom: 25px;
     right: 25px;
@@ -150,11 +152,13 @@ nav:hover {
 .btn-mentor-close {
     opacity: 0;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     padding: 10px;
     border-radius: 50%;
-    height: 30px;
-    width: 30px;
+    height: 40px;
+    width: 40px;
     position: absolute;
     bottom: 25px;
     right: 25px;
@@ -162,7 +166,6 @@ nav:hover {
 }
 
 .btn-mentor-icon {
-    margin: 0 auto;
     display: block;
 }
 
